# EvANN

./: .gitignore  CMakeLists.txt  main.cpp
Distributions/: distributions.h  exponentialDistribution.cpp  exponentialDistribution.h  i_distribution.h
FA/: firefly.cpp  firefly.h  fireflyFactory.cpp  fireflyFactory.h  swarm.cpp  swarm.h
FA/ObjectiveFunctions/: i_objectiveFunction.h
FA/Strategies/: i_fireflyStrategy.h  neuralFireflyStrategy.cpp  neuralFireflyStrategy.h  rssBounceFireflyStrategy.cpp  rssBounceFireflyStrategy.h  rssRollFireflyStrategy.cpp  rssRollFireflyStrategy.h  strategies.h
GA/: exponentialDistribution.cpp  exponentialDistribution.h  i_distribution.h  individual.cpp  individual.h  individualsFactory.cpp  individualsFactory.h  population.cpp  population.h
GA/Selectors/: elitismSelector.cpp  elitismSelector.h  i_selector.h  rouletteWheelSelector.cpp  rouletteWheelSelector.h  selectors.h
GA/Strategies/: i_strategy.h  neuralIndividualStrategy.cpp  neuralIndividualStrategy.h  rssBounceIndividualStrategy.cpp  rssBounceIndividualStrategy.h  rssRollIndividualStrategy.cpp  rssRollIndividualStrategy.h  strategies.h
NN/: neuralNet.cpp  neuralNet.h  neuron.cpp  neuron.h  sigmoidFunction.h
NN/Activation Functions/: i_activationFunction.h  linearFunction.h  sigmoidFunction.h
ObjectiveFunctions/: alternativeNeuralWessingerEvaluator.cpp  alternativeNeuralWessingerEvaluator.h  i_objectiveFunction.h  neuralFireflyEvaluator.cpp  neuralFireflyEvaluator.h  neuralWessingerEvaluator.cpp  neuralWessingerEvaluator.h  objectiveFunctions.h
ObjectiveFunctions/Normalizers/: basicNormalizer.cpp  basicNormalizer.h  boundedLogNormalizer.cpp  boundedLogNormalizer.h  boundedNormalizer.cpp  boundedNormalizer.h  i_normalizer.h  logNormalizer.cpp  logNormalizer.h  (+1 more)
(+8 files in other folders)
