cmake_minimum_required(VERSION 3.5)
project(GenEvANN)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp GA/individual.h GA/individual.cpp GA/individual.h NN/neuron.cpp NN/neuron.h GA/population.cpp GA/population.h Distributions/i_distribution.h Distributions/exponentialDistribution.cpp Distributions/exponentialDistribution.h NN/neuralNet.cpp NN/neuralNet.h "NN/Activation Functions/i_activationFunction.h" "NN/Activation Functions/sigmoidFunction.h" "NN/Activation Functions/linearFunction.h" FA/firefly.h FA/Strategies/i_fireflyStrategy.h FA/swarm.h FA/Strategies/neuralFireflyStrategy.cpp FA/Strategies/neuralFireflyStrategy.h FA/ObjectiveFunctions/i_objectiveFunction.h)
add_executable(GenEvANN ${SOURCE_FILES} GA/individual.h GA/individual.cpp GA/individual.h NN/neuron.cpp NN/neuron.h GA/population.cpp GA/population.h Distributions/i_distribution.h Distributions/exponentialDistribution.cpp Distributions/exponentialDistribution.h NN/neuralNet.cpp NN/neuralNet.h "NN/Activation Functions/i_activationFunction.h" "NN/Activation Functions/sigmoidFunction.h" "NN/Activation Functions/linearFunction.h" FA/firefly.h FA/Strategies/i_fireflyStrategy.h FA/swarm.h FA/Strategies/neuralFireflyStrategy.cpp FA/Strategies/neuralFireflyStrategy.h FA/ObjectiveFunctions/i_objectiveFunction.h)